--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,29 +1,34 @@
-
 <header class="header">
-        <nav class="nav">
-            <div class="logo-container">
-                <h3 class="logo-text">l'Éclipse</h3>
-            </div>
-            <ul class="links">
-                <li class="item">
-                    <a href="#" class="link">Home</a>
-                </li>
-                <li class="item">
-                    <a href="#" class="link">Menu</a>
-                </li>
-                <li class="item">
-                    <a href="#" class="link">Reservations</a>
-                </li>
-                <li class="item">
-                    <a href="#" class="link">About Us</a>
-                </li>
-                <li class="item">
-                    <a href="#" class="link">Gallery</a>
-                </li>
-                <li class="item">
-                    <a href="#" class="link"> Contacts</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
+  <nav class="nav">
+    <div class="logo-container">
+      <h3 class="logo-text">l'Éclipse</h3>
+    </div>
+    <ul class="links">
+      <li class="item">
+        <a href="#" class="link">Home</a>
+      </li>
+      <li class="item">
+        <a href="#" class="link">Menu</a>
+      </li>
+      <li class="item">
+        <a href="#" class="link">Reservations</a>
+      </li>
+      <li class="item">
+        <a href="#" class="link">About Us</a>
+      </li>
+      <li class="item">
+        <a href="#" class="link">Gallery</a>
+      </li>
+      <li class="item">
+        <a href="#" class="link"> Contacts</a>
+      </li>
+    </ul>
+    <div class="hamburger">
+      <svg viewBox="0 0 100 80" width="40" height="40">
+        <rect width="100" height="20"></rect>
+        <rect y="30" width="100" height="20"></rect>
+        <rect y="60" width="100" height="20"></rect>
+      </svg>
+    </div>
+  </nav>
+</header>
