--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,23 +1,41 @@
 <section class="hero">
-    <div class="container">
-        <div class="grid">
-            <app-header></app-header>
-            <div class="hero-mid">
-                <div class="hero-logo">
-                    <h1 class="logo-text">l'Éclipse</h1>
-                </div>
-                <div class="hero-tag">
-                    <svg class="svg" xmlns="http://www.w3.org/2000/svg">
-                        <line class="line" x1="0" y1="50%" x2="80%" y2="50%" stroke="#fff" stroke-width="2"  />
-                      </svg>
-                      <h3 class="tag">French Restaurant</h3>
-                </div>
-                <div class="quick-link">
-                    <a href="#">Menu</a>
-                </div>
-            </div>
-
+  <div class="container">
+    <div class="grid">
+      <app-header></app-header>
+      <div class="hero-mid">
+        <div class="hero-logo">
+          <h1 class="logo-text">l'Éclipse</h1>
         </div>
+        <div class="hero-tag">
+          <svg class="svg" xmlns="http://www.w3.org/2000/svg">
+            <line
+              class="line"
+              x1="0"
+              y1="10%"
+              x2="80%"
+              y2="10%"
+              stroke="#fff"
+              stroke-width="2"
+            />
+          </svg>
+          <h3 class="tag">French Cuisine</h3>
+        </div>
+        <div class="quick-link">
+          <a href="#" class="link">Menu</a>
+        </div>
+      </div>
+      <div class="hero-bottom">
+        <div class="socials">
+          <a href="https://www.instagram.com" class="link">Instagram</a>
+        </div>
+        <div class="food-tag">
+          <h4 class="title">Cotes D'Agneau</h4>
+          <div class="price">$28.98</div>
+        </div>
+        <div class="address">
+          <p class="text">3333 Peachtree Rd, Atlanta GA 30328</p>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
-
