--- a/src/app/mobile-menu/mobile-menu.component.html
+++ b/src/app/mobile-menu/mobile-menu.component.html
@@ -17,6 +17,7 @@
             x2="100%"
             y2="100%"
             style="stroke: black; stroke-width: 4"
+            #line1
           />
           <line
             x1="100%"
@@ -24,6 +25,7 @@
             x2="0"
             y2="100%"
             style="stroke: black; stroke-width: 4"
+            #line2
           />
         </svg>
       </div>
