--- a/src/app/mobile-menu/mobile-menu.component.scss
+++ b/src/app/mobile-menu/mobile-menu.component.scss
@@ -1,14 +1,17 @@
 @import "../../variables.scss";
 
 .mobile-menu {
+  display: none;
   width: 100vw;
   height: 100vh;
   position: fixed;
   background-color: $orange;
+  position: absolute;
   .overlay {
     width: 100vw;
     height: 100vh;
     background-color: $white;
+    position: absolute;
     .container {
       height: 100%;
       position: relative;
