having trouble getting animation to work

--- a/src/app/mobile-menu/mobile-menu.component.html
+++ b/src/app/mobile-menu/mobile-menu.component.html
@@ -1,4 +1,4 @@
-<section class="mobile-menu" #menu>
+<section class="mobile-menu" #menu *ngIf="menuTrigger">
   <div class="overlay" #overlay>
     <div class="container">
       <div class="close-btn" (click)="closeMenu()">
