--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
         }}</a>
       </li>
     </ul>
-    <div class="hamburger">
+    <div class="hamburger" #ham (click)="menuActive()">
       <svg viewBox="0 0 100 80" width="40" height="20">
         <rect width="100" height="10" stroke="#fff" fill="#fff"></rect>
         <rect y="30" width="100" height="10" stroke="#fff" fill="#fff"></rect>
