--- a/src/app/mobile-menu/mobile-menu.component.scss
+++ b/src/app/mobile-menu/mobile-menu.component.scss
@@ -1,7 +1,7 @@
 @import "../../variables.scss";
 
 .mobile-menu {
-  display: none;
+  // display: none;
   width: 100vw;
   height: 100vh;
   position: fixed;
